<resources>
  <string name="app_name" translatable="false">Grocy</string>
  <string name="app_developer" translatable="false">Patrick &amp; Dominic Zedler</string>
  <string name="action_purchase">Purchase</string>
  <string name="action_consume">Consume</string>
  <string name="action_transfer">Transfer</string>
  <string name="action_inventory">Update amount</string>
  <string name="action_consume_all">Consume all</string>
  <string name="action_consume_spoiled">Consume as spoiled</string>
  <string name="action_consume_one_spoiled">Consume 1 as spoiled</string>
  <string name="action_consume_one">Consume 1 %1$s of %2$s</string>
  <string name="action_open">Mark as opened</string>
  <string name="action_open_one">Open 1 %1$s of %2$s</string>
  <string name="action_edit_product">Edit product</string>
  <string name="action_shopping_list_add">Add to shopping list</string>
  <string name="action_consume_recipe">Consume all ingredients needed by this recipe</string>
  <string name="action_copy_recipe">Copy recipe</string>
  <string name="action_apply_desired_servings">Apply desired servings for this recipe and update data</string>
  <string name="action_product_opened">Product opened</string>
  <string name="action_transfer_from">Transfer From</string>
  <string name="action_transfer_to">Transfer To</string>
  <string name="action_back">Back</string>
  <string name="action_search">Search</string>
  <string name="action_next">Next</string>
  <string name="action_new">New</string>
  <string name="action_prev">Previous</string>
  <string name="action_feedback">Send feedback</string>
  <string name="action_reset">Reset</string>
  <string name="action_reload">Reload</string>
  <string name="action_top_scroll">Scroll to top</string>
  <string name="action_send">Send</string>
  <string name="action_close">Close</string>
  <string name="action_scan">Scan</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_add">Add</string>
  <string name="action_add_recipe_to_meal_plan">Add recipe to meal plan</string>
  <string name="action_clear">Clear</string>
  <string name="action_clear_shopping_list">Clear shopping list</string>
  <string name="action_auto_sync">Auto sync</string>
  <string name="action_rate">Rate on Google Play</string>
  <string name="action_rate_description">Motivate the developers</string>
  <string name="action_email">Send email</string>
  <string name="action_email_description">Contact the developers</string>
  <string name="action_new_issue">Open new issue on GitHub</string>
  <string name="action_new_issue_description">Report bugs or request a feature</string>
  <string name="action_get_started">Get started</string>
  <string name="action_ascending">Ascending</string>
  <string name="action_filter">Filter</string>
  <string name="action_sort">Sort</string>
  <string name="action_undo">Undo</string>
  <string name="action_retry">Retry</string>
  <string name="action_edit">Edit</string>
  <string name="action_copy">Copy</string>
  <string name="action_proceed">Proceed</string>
  <string name="action_delete">Delete</string>
  <string name="action_save">Save</string>
  <string name="action_save_close">Save and close</string>
  <string name="action_save_not_close">Save without closing</string>
  <string name="action_logout">Logout</string>
  <string name="action_restart">Restart</string>
  <string name="action_create">Create</string>
  <string name="action_link">Link</string>
  <string name="action_try_again">Try again</string>
  <string name="action_open_scanner">Open scanner</string>
  <string name="action_discard">Discard</string>
  <string name="action_clear_form">Clear form</string>
  <string name="action_take_photo">Take photo</string>
  <string name="action_paste">Paste</string>
  <string name="action_link_and_clear">Link only</string>
  <string name="action_toggle_done">Toggle done</string>
  <string name="action_change_layout">Change layout</string>
  <string name="action_edit_notes">Edit notes</string>
  <string name="action_add_missing">Add missing products</string>
  <string name="action_purchase_done_items">Purchase done items</string>
  <string name="action_purchase_all_items">Purchase all items</string>
  <string name="action_skip_entry">Skip entry</string>
  <string name="action_toggle_flash">Toggle flash</string>
  <string name="action_edit_recipe">Edit recipe</string>
  <string name="action_delete_recipe">Delete recipe</string>
  <string name="action_delete_shopping_list">Delete shopping list</string>
  <string name="action_create_key">Create key</string>
  <string name="action_login">Login</string>
  <string name="action_ignore">Ignore</string>
  <string name="action_clear_all">All</string>
  <string name="action_clear_done">Done</string>
  <string name="action_display_help">Display help texts</string>
  <string name="action_demo_server">Demo server</string>
  <string name="action_own_server">Own server</string>
  <string name="action_open_server">Use server interface</string>
  <string name="action_enter_data_manually">Enter data manually</string>
  <string name="action_settings_backup_restore">Backup or restore settings</string>
  <string name="action_details">Details</string>
  <string name="action_perform">Perform action</string>
  <string name="action_play_store" translatable="false">Play Store</string>
  <string name="action_github" translatable="false">GitHub</string>
  <string name="action_share">Share</string>
  <string name="action_share_description">Tell your friends about Grocy Android</string>
  <string name="action_no_filter">No filter</string>
  <string name="action_show_done_tasks">Show done tasks</string>
  <string name="action_track_chore_execution">Track chore execution now</string>
  <string name="action_track_next_chore_schedule">Track next chore schedule</string>
  <string name="action_skip_next_chore_schedule">Skip next chore schedule</string>
  <string name="action_reschedule_next_execution">Reschedule next execution</string>
  <string name="action_put_missing_products_on_shopping_list">Put missing products on shopping list</string>
  <string name="action_backup">Backup</string>
  <string name="action_restore">Restore</string>
  <string name="action_configure_sections">Configure sections</string>
  <plurals name="msg_due_products">
    <item quantity="one">%1$d due soon</item>
    <item quantity="other">%1$d due soon</item>
  </plurals>
  <plurals name="msg_overdue_products">
    <item quantity="one">%1$d overdue</item>
    <item quantity="other">%1$d overdue</item>
  </plurals>
  <plurals name="msg_expired_products">
    <item quantity="one">%1$d expired</item>
    <item quantity="other">%1$d expired</item>
  </plurals>
  <plurals name="msg_not_fresh_products_short">
    <item quantity="one">%1$d not fresh</item>
    <item quantity="other">%1$d not fresh</item>
  </plurals>
  <plurals name="msg_not_fresh_products_long">
    <item quantity="one">%1$d not fresh (all below)</item>
    <item quantity="other">%1$d not fresh (all below)</item>
  </plurals>
  <plurals name="msg_missing_products">
    <item quantity="one">%1$d below min. stock amount</item>
    <item quantity="other">%1$d below min. stock amount</item>
  </plurals>
  <plurals name="msg_in_stock_products">
    <item quantity="one">%1$d in stock</item>
    <item quantity="other">%1$d in stock</item>
  </plurals>
  <plurals name="msg_opened_products">
    <item quantity="one">%1$d opened</item>
    <item quantity="other">%1$d opened</item>
  </plurals>
  <string name="msg_consumed">Consumed %1$s %2$s of %3$s</string>
  <string name="msg_consumed_spoiled">Consumed %1$s %2$s of %3$s as spoiled</string>
  <string name="msg_opened">Mark %1$s %2$s of %3$s as opened</string>
  <plurals name="msg_servings">
    <item quantity="one">%1$s serving</item>
    <item quantity="other">%1$s servings</item>
  </plurals>
  <plurals name="msg_undone_items">
    <item quantity="one">%1$d undone</item>
    <item quantity="other">%1$d undone</item>
  </plurals>
  <plurals name="msg_done_items">
    <item quantity="one">%1$d done</item>
    <item quantity="other">%1$d done</item>
  </plurals>
  <plurals name="msg_done_tasks">
    <item quantity="one">%1$d done</item>
    <item quantity="other">%1$d done</item>
  </plurals>
  <plurals name="msg_not_done_tasks">
    <item quantity="one">%1$d not done</item>
    <item quantity="other">%1$d not done</item>
  </plurals>
  <plurals name="msg_due_tasks">
    <item quantity="one">%1$d due soon</item>
    <item quantity="other">%1$d due soon</item>
  </plurals>
  <plurals name="msg_due_today_tasks">
    <item quantity="one">%1$d due today</item>
    <item quantity="other">%1$d due today</item>
  </plurals>
  <plurals name="msg_overdue_tasks">
    <item quantity="one">%1$d overdue</item>
    <item quantity="other">%1$d overdue</item>
  </plurals>
  <plurals name="msg_due_tasks_short">
    <item quantity="one">%1$d due</item>
    <item quantity="other">%1$d due</item>
  </plurals>
  <plurals name="msg_due_tasks_long">
    <item quantity="one">%1$d due (all below)</item>
    <item quantity="other">%1$d due (all below)</item>
  </plurals>
  <plurals name="msg_assigned_tasks">
    <item quantity="one">%1$d assigned</item>
    <item quantity="other">%1$d assigned</item>
  </plurals>
  <string name="msg_task_mark">Mark task as completed</string>
  <string name="msg_task_completed">Marked task as completed</string>
  <string name="msg_task_not_completed">Marked task as not completed</string>
  <string name="msg_task_undo">Undo task</string>
  <string name="msg_recipes_enough_in_stock">Enough in stock</string>
  <string name="msg_recipes_enough_in_stock_filter">(%1$d) Enough in stock</string>
  <string name="msg_recipes_enough_in_stock_amount">Enough in stock (%1$s)</string>
  <string name="msg_barcode_formats">You can improve the speed of the barcode detector by configuring it to only detect those formats which you expect to read.</string>
  <string name="msg_feedback">Do you have any wishes, questions or errors? Contact us and let us help!\nOtherwise we would be very happy about a nice review in the Play Store.</string>
  <string name="title_product_overview">Product overview</string>
  <string name="title_feedback">Feedback</string>
  <string name="title_options">Options</string>
  <string name="title_about">About</string>
  <string name="title_preparation_mode">Preparation mode</string>
  <string name="title_shopping_list_edit">Edit shopping list</string>
  <string name="property_shopping_lists">Shopping lists</string>
  <string name="property_group_by">Group by: %1$s</string>
  <string name="property_fields">Fields</string>
  <string name="info_changelog">Changelog</string>
  <string name="setting_barcode_formats">Barcode formats</string>
  <string name="barcode_format_code128" translatable="false">Code 128</string>
  <string name="barcode_format_code39" translatable="false">Code 39</string>
  <string name="barcode_format_code93" translatable="false">Code 93</string>
  <string name="barcode_format_codabar" translatable="false">Codabar</string>
  <string name="barcode_format_ean13" translatable="false">EAN-13</string>
  <string name="barcode_format_ean8" translatable="false">EAN-8</string>
  <string name="barcode_format_itf" translatable="false">ITF</string>
  <string name="barcode_format_upca" translatable="false">UPC-A</string>
  <string name="barcode_format_upce" translatable="false">UPC-E</string>
  <string name="barcode_format_qr" translatable="false">QR Code</string>
  <string name="barcode_format_pdf417" translatable="false">PDF417</string>
  <string name="barcode_format_aztec" translatable="false">Aztec</string>
  <string name="barcode_format_matrix" translatable="false">Data Matrix</string>
  <string name="barcode_format_rss14" translatable="false">RSS-14</string>
  <string name="barcode_format_rsse" translatable="false">RSS Expanded</string>
</resources>