<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_done"
        android:title="@string/action_toggle_done"
        android:icon="@drawable/ic_round_done"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_purchase"
        android:title="@string/action_purchase"
        android:icon="@drawable/ic_round_local_grocery_store"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_round_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_round_delete_anim"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>