<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Grocy Android.
  ~
  ~ Grocy Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Grocy Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Grocy Android. If not, see http://www.gnu.org/licenses/.
  ~
  ~ Copyright (c) 2020-2021 by Patrick Zedler and Dominic Zedler
  -->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_about"
    android:title="@string/title_about"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_feedback"
    android:title="@string/action_feedback"
    app:showAsAction="never" />

  <item
    android:id="@+id/action_changelog"
    android:title="@string/info_changelog"
    app:showAsAction="never" />

</menu>